# dicc

./: .gitignore  README.md  pyproject.toml
src/dicc/: __init__.py  cache.py  default_config.toml  terminal.py  url.py
src/dicc/cli/: cache.py  main.py
src/dicc/config/: config.py  default_config.toml  main.py
src/dicc/display/: collegiate.py  common.py  format_element.py  no_response.py
src/dicc/query/: __init__.py  common.py  main.py
src/dicc/responses/: abstract.py  collegiate.py
tests/: test_url.py
tests/test_display/: test_collegiate.py  test_common.py
