[tool.poetry]
name = "dicc"
version = "0.1.0"
description = "Terminal dictionary and thesaurus application using Merriam-Webster's API."
authors = ["acbuie <aidancbuie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
httpx = "^0.26.0"
attrs = "^23.2.0"
typer = {extras = ["shellingham"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
mypy = "^1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "dicc.cli.main:run"

[tool.mypy]
pretty = true
strict = true

[tool.ruff]
line-length = 88
select = ["D", "E", "F", "I001", "N"]
# Google docstring style
ignore = ["D105", "D107", "D203", "D204", "D213", "D215", "D400", "D404", "D406", "D407", "D408", "D409", "D413"]
unfixable = ["F401", "F841"]
