[project]
name = "dicc"
version = "0.1.0"
description = "Terminal dictionary and thesaurus application using Merriam-Webster's API."
authors = [ {name = "acbuie", email = "aidancbuie@gmail.com"} ]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "rich>=13.7.1",
    "attrs>=23.2.0",
    "typer>=0.12.3",
]

[project.scripts]
cli = "dicc.cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "pytest>=8.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targest.wheel]
packages = ["src/dicc"]

[tool.mypy]
pretty = true
strict = true

[tool.ruff]
line-length = 88
select = ["D", "E", "F", "I001", "N"]
# Google docstring style
ignore = ["D105", "D107", "D203", "D204", "D213", "D215", "D400", "D404", "D406", "D407", "D408", "D409", "D413"]
unfixable = ["F401", "F841"]
